--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <li>
       <a href="https://www.Linkedin.com/in/maria-fernanda-souza-souto-65635b228"target="_blank">🟦 Linkedin</a>
       <li>
-        <a href="https:Instagram.com/fefe_souto03"target="_blank">📷 Instagram</a>
+        <a href="https://www.Instagram.com/fefe_souto03"target="_blank">📷 Instagram</a>
       </li>
      </li>
      <li>
