--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="pt-br">
    <head>
      <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>MafêLinks</title>
-     <link href="https: //fonts.googleapis.com/css2? family= Roboto+Mono:wght@400;500 family= Roboto:wght@500;700 display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="./styles.css">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MafêLinks</title>
+  <link href="https: //fonts.googleapis.com/css2? family= Roboto+Mono:wght@400;500 family= Roboto:wght@500;700 display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
+  
+
+
 </head>
 <body class="pink">
-  
-    <div class="conteiner"> 
-    <img 
+  <div class="conteiner"> 
+    
+
+
+  <img 
   class="avatar"
   src="https://avatars.githubusercontent.com/u/108733745?v=4"
    alt="Imagem Mafê">
@@ -24,7 +29,10 @@
     <li>
       <a href="https://www.Linkedin.com/in/maria-fernanda-souza-souto-65635b228"target="_blank">🟦 Linkedin</a>
       <li>
-        <a href="https://www.instagram.com/fefe_souto03/"target="_blank">📷 Instagram</a>
+        <a href="https:Instagram.com/fefe_souto03"target="_blank">📷 Instagram</a>
+      </li>
+      <li>
+        <a href="https://www.behance.net/mariafernanda149"target="_blank">⬛BEHANCE</a>
       </li>
      </li>
      <li>
