--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="https://www.instagram.com/fefe_souto03/"target="_blank">📷 Instagram</a>
       </li>
       <li>
-        <a href="https://discord.com/channels/@me"target="_blank"> 🔷 DISCORD</a>
+        <a href="https://discord.com/channels/MariaFernanda#3549"target="_blank"> 🔷 DISCORD</a>
       </li>
      </li>
      <li>
