--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   src="https://avatars.githubusercontent.com/u/108733745?v=4"
    alt="Imagem Mafê">
   <h1> Maria Fernanda </h1>
-  <p class="username">@fefe_souto03</p>
+  <p class="username">@maria.fsouto</p>
 
   <ul>
     <li>
